libdrm (2.4.68-2) UNRELEASED; urgency=medium

  * Update debian/upstream/signing-key.asc.
  * Bump Standards-Version to 3.9.8, no changes needed.
  * Update watch url to use https instead of http.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 10 May 2016 14:45:31 +0200

libdrm (2.4.68-1) unstable; urgency=medium

  * New upstream release. (LP: #1577735)

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 03 May 2016 14:30:06 +0300

libdrm (2.4.67-1) unstable; urgency=medium

  * New upstream release.
  * patches: Refreshed.
  * libdrm-amdgpu1.symbols: Updated.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 16 Feb 2016 12:14:16 +0200

libdrm (2.4.66-2) unstable; urgency=medium

  * Update libdrm-exynos1.symbols and shlibs.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 15 Jan 2016 12:08:05 +0100

libdrm (2.4.66-1) unstable; urgency=medium

  * New upstream release.
  * Update symbols file and bump shlibs for libdrm2.
  * Update libdrm-intel1.symbols and shlibs.
  * Update libdrm-nouveau2.symbols and shlibs.
  * Drop obsolete Replaces from pre-wheezy.
  * Add myself to Uploaders.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Fri, 15 Jan 2016 10:41:05 +0100

libdrm (2.4.65-3) unstable; urgency=medium

  * rules: Bump freedreno shlib back to 2.4.65.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 26 Oct 2015 23:15:56 +0200

libdrm (2.4.65-2) unstable; urgency=medium

  [ Andreas Boll ]
  * Update libdrm-freedreno1.symbols and shlibs.
  * Drop Debian revision from new symbols in libdrm2.symbols.

  [ Fathi Boudra ]
  * Enable freedreno build on arm64 architecture.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 26 Oct 2015 21:40:43 +0200

libdrm (2.4.65-1) unstable; urgency=medium

  [ Andreas Boll ]
  * New upstream release.
  * Update debian/upstream/signing-key.asc.
  * Update symbols file and bump shlibs for libdrm2.
  * Enable libdrm-amdgpu1 on kfreebsd-*.
  * Fix Vcs-* fields.
  * Add upstream url.
