@@ -49,10 +49,18 @@ endif
 ifeq ($(ARM), yes)
 	confflags += --enable-exynos-experimental-api
 	confflags += --enable-omap-experimental-api
-	confflags += --enable-tegra-experimental-api
 else
 	confflags += --disable-exynos-experimental-api
 	confflags += --disable-omap-experimental-api
+endif
+
+# Tegra is on arm and arm64
+ifneq (,$(filter arm arm64,$(DEB_HOST_ARCH_CPU)))
+	TEGRA = yes
+endif
+ifeq ($(TEGRA), yes)
+	confflags += --enable-tegra-experimental-api
+else
 	confflags += --disable-tegra-experimental-api
 endif
 
@@ -96,6 +104,8 @@ endif
 ifeq ($(ARM), yes)
 	dh_strip -plibdrm-omap1 --dbg-package=libdrm-omap1-dbg
 	dh_strip -plibdrm-exynos1 --dbg-package=libdrm-exynos1-dbg
+endif
+ifeq ($(TEGRA), yes)
 	dh_strip -plibdrm-tegra0 --dbg-package=libdrm-tegra0-dbg
 endif
 ifeq ($(FREEDRENO), yes)
@@ -116,6 +126,8 @@ endif
 ifeq ($(ARM), yes)
 	dh_makeshlibs -plibdrm-omap1 -V'libdrm-omap1 (>= 2.4.38)' -- -c4
 	dh_makeshlibs -plibdrm-exynos1 -V'libdrm-exynos1 (>= 2.4.66)' -- -c4
+endif
+ifeq ($(TEGRA), yes)
 	dh_makeshlibs -plibdrm-tegra0 -V'libdrm-tegra0' -- -c4
 endif
 ifeq ($(FREEDRENO), yes)
