@@ -1,8 +1,12 @@
 libdrm (2.4.68-2) UNRELEASED; urgency=medium
 
+  [ Andreas Boll ]
   * Update debian/upstream/signing-key.asc.
   * Bump Standards-Version to 3.9.8, no changes needed.
   * Update watch url to use https instead of http.
+
+  [ Julien Cristau ]
+  * Build libdrm-tegra on arm64 (closes: #828023).  Thanks, Martin Michlmayr!
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 10 May 2016 14:45:31 +0200
 
